<resources>
    <string name="app_name">Digi Sebhaa</string>
    <string name="morning">أذكار ص</string>
    <string name="evening">أذكار م</string>
    <string name="rosary">السبحة</string>
    <string name="settings">الإعدادات</string>
    <string name="hadiths">أحاديث</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sabeh">سَبِّحِ اسْمَ رَبِّكَ الْأَعْلَى</string>
    <string name="title">السبحة الإلكترونية</string>
    <string name="describe">أَلَا بِذِكْرِ اللَّهِ تَطْمَئِنُّ الْقُلُوبُ</string>
    <string name="numbers">0</string>
    <string name="des">من قالها حين يصبح</string>
    <string name="_3">3</string>
    <string name="narated">رواه البخاري</string>
    <string name="text_d">لا اله الا الله</string>
    <string name="_0">0</string>
    <string name="exit">Exit</string>
    <string name="background">Background</string>
    <string name="logo">Logo</string>
    <string name="counterbutton">CounterButton</string>
    <string name="resetbutton">ResetButton</string>
    <string name="splashbackground">SplashBackground</string>
    <string name="evening_dhikr_title">أذكار المساء</string>
    <string name="hadith_title">أحاديث</string>
    <string name="morning_dhikr_title">أذكار الصباح</string>
    <string name="no_text">No Text</string>
    <string name="enter_counter">العداد</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="font_text">الخط والألوان</string>
    <string name="change_font_type">تغيير نوع الخط</string>
    <string name="font_size">تغيير حجم الخط</string>
    <string name="font_color">تغيير اللون</string>
    <string name="change_font_type_title">تغيير نوع الخط للأذكار</string>
    <string name="color_dhikr_title">تغيير لون الأذكار</string>
    <string name="size_dhikr_title">تغيير حجم الأذكار</string>
    <string name="one_time">مرة واحدة</string>
    <string name="dhikr_morn_even">أذكار الصباح والمساء</string>
    <string name="notif_for_dhikr">تفعيل التنبيهات للأذكار</string>
    <string name="notif_for_hadith">تفعيل التنبيهات للأحاديث</string>
    <string name="_6_00">6:00 ص</string>
    <string name="morning_dhikr_time">موعد التنبيهات لأذكار الصباح</string>
    <string name="morning_notif_time">ضبط تنبيهات أذكار الصباح</string>
    <string name="evening_dhikr_time">موعد التنبيهات لأذكار المساء</string>
    <string name="evening_notif_time">ضبط تنبيهات أذكار المساء</string>
    <string name="hadith_notif_time">ضبط تنبيهات الأحاديث</string>
    <string name="_6_0">6:00 م</string>
    <string name="hadith_time">موعد التنبيهات للأحاديث</string>
    <string name="sadka_garia">صدقة جارية</string>
    <string name="evaluation_app">تقييم التطبيق</string>
    <string name="add_evaluation">اضف تقييمك لنستطيع تحسين الخدمة</string>
    <string name="general">عام</string>
    <string name="_12_00">12:00 م</string>
    <string name="switch_notif_dhikr">تنبيه:التنبيهات للأذكار غير مفعلة الآن</string>
    <string name="switch_notif_hadith">تنبيه:التنبيهات للأحاديث غير مفعلة الآن</string>
    <string name="sora">قل هو الله أحد الله الصمد، لم يلد وليم يولد ولم يكن له كفوا أحد قل هو الله أحد الله الصمد، لم يلد وليم يولد ولم يكن له كفوا أحد</string>
    <string name="repeats">التكرار</string>
    <string name="switch_vibration_dhikr">تفعيل وضع الإهتزاز للأذكار</string>
    <string name="status_dhikr_vibration_tv">تنبيه:وضع الإهتزاز للأذكار غير مفعل الآن</string>
    <string name="status_tv">تنبيه: لن تغلق هذه النافذة إلا بعد ضبط التنبيهات جميعاً</string>
    <string name="share">مشاركة</string>
    <string name="sadaka">\"صدقة جارية\"</string>
    <string name="sadaka_ads">\"إخراج صدقة\"</string>
    <string name="title_ads">إخراج صدقة</string>
    <string name="Person_name">اسم الشخص</string>
    <string name="description_sadaka_person">اللهم أجعل ثواب هذا  إلى</string>
    <string name="sadaka_desc">شارك التطبيق ليصبح صدقة جارية لك او لأى شخص آخر بحيث يتناقله آلاف الناس من بعدك!</string>
    <string name="sadaka_desc_ads">(ظِلُّ المؤمنِ يومَ القيامةِ صَدقتُه) \n اجعل صدقتك هي مشاهدتك هذه الإعلانات ونتعهد أمام الله أن عائد هذا الجزء من الإعلانات سوف يكون صدقة جارية لكل من شارك فى ذلك.</string>
    <string name="notif_dilog_desc">هذه النافذه لن تظهر لك مرة آخري\n من فضلك اضبط مواعيد التنبيهات التي تريدها لتذكيرك بأوقات قراءة الأذكار والأحاديث.</string>
    <string name="contactus_dilog_desc">يمكنك إرسال استفسارات\n أو مقترحات من خلال\n فيسبوك أو واتس اب.</string>
    <string name="whatsapp">واتس اب</string>
    <string name="video_ads">مشاهدة فيديو</string>
    <string name="facebook">فيسبوك</string>
    <string name="page_ads">مشاهدة إعلان</string>
    <string name="twitter">تويتر</string>
    <string name="copy">نسخ</string>
    <string name="reset">reset</string>
    <string name="sadaka_garia">صدقة جارية</string>
    <string name="contactus">للتواصل معنا</string>
    <string name="enabled">مفعل</string>
    <string name="unenabled">غير مفعل</string>

    <string-array name="spinner_azkar">
        <item>الله أكبر</item>
        <item>سبحان الله</item>
        <item>الحمد لله</item>
        <item>استغفر الله</item>
        <item>لا إله إلا الله</item>
    </string-array>

</resources>
