<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_strok_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sadaka_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/janna"
        android:gravity="center"
        android:text="@string/sadaka"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_person_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/janna"
        android:padding="10dp"
        android:text="@string/description_sadaka_person"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sadaka_title" />

    <EditText
        android:id="@+id/et_person_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/Person_name"
        android:layoutDirection="rtl"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_person_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_person_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_sadaka_title" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_person_desc" />

    <TextView
        android:id="@+id/tv_sdaka_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/janna"
        android:padding="10dp"
        android:text="@string/sadaka_desc"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <Button
        android:id="@+id/btn_whats_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/whatsapp"
        android:fontFamily="@font/janna"
        android:text="@string/whatsapp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sdaka_des" />

    <Button
        android:id="@+id/btn_face_book"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/facebook"
        android:fontFamily="@font/janna"
        android:text="@string/facebook"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_whats_app" />

    <Button
        android:id="@+id/btn_twitter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/twitter"
        android:fontFamily="@font/janna"
        android:text="@string/twitter"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_face_book" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray"
        android:fontFamily="@font/janna"
        android:text="@string/copy"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_twitter" />

</androidx.constraintlayout.widget.ConstraintLayout>