<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".main.destinations.DarkModeFragment">

    <EditText
        android:id="@+id/et_get_counter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_radius"
        android:hint="@string/enter_counter"
        android:inputType="number"
        android:maxLength="6"
        android:padding="5dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textDirection="rtl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_light_mode"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_lightmode"
        android:visibility="visible"
        app:borderWidth="0dp"
        app:fabCustomSize="50dp"
        app:fab_colorPressed="@color/lightBlue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtn_reset_counter"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/lightBlue"
        android:contentDescription="@string/resetbutton"
        android:src="@drawable/ic_zero"
        app:fabCustomSize="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tgbtn_vibration"
        app:maxImageSize="15dp" />

    <ToggleButton
        android:id="@+id/tgbtn_vibration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/ic_vibrat"
        android:textColor="@android:color/white"
        android:textOff="@string/unenabled"
        android:textOn="@string/enabled"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_light_mode" />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/numbers"
        android:textColor="@color/lightBlue"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="@id/et_get_counter"
        app:layout_constraintTop_toBottomOf="@id/et_get_counter" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6572636131062240/8480050975"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>