<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_strok_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sadaka_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/janna"
        android:gravity="center"
        android:text="@string/sadaka_ads"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sadaka_title" />

    <TextView
        android:id="@+id/tv_sdaka_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/janna"
        android:padding="10dp"
        android:text="@string/sadaka_desc_ads"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <Button
        android:id="@+id/btn_video_ads"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        android:drawableLeft="@drawable/ic_play_video"
        android:fontFamily="@font/janna"
        android:padding="5dp"
        android:text="@string/video_ads"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sdaka_des" />

    <Button
        android:id="@+id/btn_page_ads"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/lightBlue"
        android:drawableLeft="@drawable/ic_page_ads"
        android:fontFamily="@font/janna"
        android:padding="5dp"
        android:text="@string/page_ads"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_video_ads" />

</androidx.constraintlayout.widget.ConstraintLayout>